service-base.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: fortune
spec:
  template:
    metadata:
      name: fortune-v1
    spec:
      containers:
      - image: registry.gitlab.com/vshn/applications/fortune-go:latest
