01-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
      labels:
        app: catalog
    spec:
      volumes:
      - name: tmp
        emptyDir:
          medium: Memory
          sizeLimit: 128Mi
      containers:
      - name: catalog
        image: registry.gitlab.com/akosma/catalog-dotnet:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: '500m'
            memory: '512Mi'
          limits:
            cpu: '500m'
            memory: '512Mi'
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: catalog
  name: catalog
spec:
  selector:
    app: catalog
  ports:
    - name: web
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog
spec:
  rules:
  - host: catalog.apps-crc.testing
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: catalog
            port:
              number: 8080
