02-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simple-go-api-app
  name: simple-go-api-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-go-api-app
  template:
    metadata:
      labels:
        app: simple-go-api-app
    spec:
      containers:
      - name: catalog
        image: registry.gitlab.com/akosma/simple-go-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: '500m'
            memory: '512Mi'
          limits:
            cpu: '500m'
            memory: '512Mi'
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-go-api-app
  name: simple-go-api-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: web
  selector:
    app: simple-go-api-app
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-go-api-app
spec:
  rules:
  - host: simple-go-api.apps-crc.testing
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: simple-go-api-app
            port:
              number: 8080
