right.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-nginx
  template:
    metadata:
      labels:
        app: hello-nginx
    spec:
      containers:
      - name: hello-nginx
        image: image-registry.openshift-image-registry.svc:5000/nginxtest/nginx
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-nginx
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: hello-nginx
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-nginx
spec:
  rules:
  - host: hello-nginx.apps-crc.testing
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hello-nginx
            port:
              number: 8080
