test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: catalog-app
  name: catalog-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-app
  template:
    metadata:
      labels:
        app: catalog-app
    spec:
      volumes:
      - name: tmp
        emptyDir:
          medium: Memory
          sizeLimit: 128Mi
      containers:
      - name: catalog
        image: registry.gitlab.com/akosma/catalog-dotnet:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: '500m'
            memory: '512Mi'
          limits:
            cpu: '500m'
            memory: '512Mi'
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: catalog-app
  name: catalog-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: web
  selector:
    app: catalog-app
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-app
spec:
  rules:
  - host: catalog.apps-crc.testing
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: catalog-app
            port:
              number: 8080
